syntax = "proto3";

package matchmaking.v1;

option go_package = "pkg/matchmaking/v1";

message FindMatchRequest {
  string player_id = 1;
  uint32 player_level = 2;
}

message FindMatchResponse { uint64 match_id = 1; }

service MatchmakingService {
  rpc FindMatch(FindMatchRequest) returns (FindMatchResponse);
}
